moved example codes to code directory

--- a/src/content/docs/guides/cancel_slurm_job.mdx
+++ b/src/content/docs/guides/cancel_slurm_job.mdx
@@ -21,7 +21,7 @@ This is an irreversible operation. Please use caution when executing this functi
 
 Here's the code you'll use to cancel slurm jobs currently running or configuring
 
-import cancel_job from '/src/cancel_job.R?raw';
+import cancel_job from '/src/code/cancel_job.R?raw';
 
 <Code title="view_partitions.R" lang="r" code={cancel_job}/>
 This will prompt you to confirm the cancellation:
