--- a/src/content/docs/guides/get_slurm_partitions.mdx
+++ b/src/content/docs/guides/get_slurm_partitions.mdx
@@ -17,7 +17,7 @@ This guide describes how to view available slurm partitions using the `get_slurm
 
 Here's the code you'll use to view slurm partitions available to you
 
-import view_partitions from '/src/view_partitions.R?raw';
+import view_partitions from '/src/code/view_partitions.R?raw';
 
 <Code title="view_partitions.R" lang="r" code={view_partitions}/>
 
