--- a/src/content/docs/guides/submit_slurm_job.mdx
+++ b/src/content/docs/guides/submit_slurm_job.mdx
@@ -23,7 +23,7 @@ Once these are set, you're ready to roll with your Slurm submission!
 ## Submitting a NONMEM job
 Here's the code you'll use to submit a job with `submit_slurm_job`, this uses default values for all arguments, many of which are determined via the `slurmtools` options discussed [here](/guides/1_getting_started).
 
-import submit_code from '/src/submit.R?raw';
+import submit_code from '/src/code/submit.R?raw';
 
 <Code title="submit_job.R" lang="r" code = {submit_code} />
 
