--- a/src/content/docs/reference/cancel_slurm_job_reference.mdx
+++ b/src/content/docs/reference/cancel_slurm_job_reference.mdx
@@ -15,7 +15,7 @@ This argument allows you to automatically cancel jobs without confirming
 
 By default, `cancel_slurm_job` makes you confirm the cancellation before the job is cancelled. With `confirm = FALSE` you can electively turn off this confirmation and cancel the job.
 
-import cancel_other_confirm from '/src/cancel_job_confirm.R?raw'
+import cancel_other_confirm from '/src/code/cancel_job_confirm.R?raw'
 
 <Code title="cancel_job.R" lang="r" code={cancel_other_confirm} />
 
