--- a/src/content/docs/reference/submit_slurm_job_reference.mdx
+++ b/src/content/docs/reference/submit_slurm_job_reference.mdx
@@ -13,14 +13,14 @@ By default, `submit_slurm_job` uses the smallest partition available to you. Thi
 
 #### specifying a higher memory `partition`
 
-import submit_code_part from '/src/submit_partition.R?raw';
+import submit_code_part from '/src/code/submit_partition.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code_part} />
 
 #### Using more cores with `ncpu`
 Set `ncpu` to any number up to the number of cores in your partition. For instance, with the cpu16mem128gb partition, ncpu can be set from 1 to 16.
 
-import submit_code_ncpu from '/src/submit_ncpu.R?raw';
+import submit_code_ncpu from '/src/code/submit_ncpu.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code_ncpu} />
 
@@ -40,14 +40,14 @@ import submit_code_ncpu from '/src/submit_ncpu.R?raw';
 ### Using the `overwrite` Argument
 By default, `submit_slurm_job` will not overwrite previously run models. Set `overwrite = TRUE` to override this.
 
-import submit_code from '/src/submit_overwrite.R?raw';
+import submit_code from '/src/code/submit_overwrite.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code} />
 
 ### Using the `dry_run` Argument
 By default, `dry_run = FALSE` and the `sbatch` command is executed. Setting `dry_run = TRUE` allows you to preview the template file without submitting it.
 
-import submit_code_dry from '/src/submit_dry.R?raw';
+import submit_code_dry from '/src/code/submit_dry.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code_dry} />
 This gives the following output
@@ -69,14 +69,14 @@ $partition
 ### Using the `slurm_job_template_path` Argument
 By default, `submit_slurm_job` uses `getOption('slurmtools.slurm_job_template_path')` for the path to the template file (see [Getting Started Guide](guides/1_getting_started) if you're unfamiliar with the `slurmtools` options). You can update this argument to use a different template file as needed.
 
-import submit_code_path from '/src/submit_path.R?raw';
+import submit_code_path from '/src/code/submit_path.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code_path}/>
 
 ### Using the `submission_root` Argument
 This directory is used to track submission scripts and output. It will be populated with the shell scripts created from filling in the template file when calling `submit_slurm_job` and the stdout/stderr from the bash script. If you would like to set it and forget it use the `slurmtools` option `options('slurmtools.submission_root')` (see the [Getting Started Guide](/guides/1_getting_started) if you are unfamiliar with this option). If you'd like to set this at runtime simply provide the path to the directory you'd like to save the output to. 
 
-import submit_code_root from '/src/submit_path.R?raw';
+import submit_code_root from '/src/code/submit_path.R?raw';
 
 <Code title="submit_job.R" lang="r" code={submit_code_root}/>
 
@@ -87,7 +87,7 @@ If the directory does not exists, `submit_slurm_job` will create it.
 ### Using the `bbi_config_path` Argument
 If you are using [`bbi`](https://github.com/metrumresearchgroup/bbi) to submit nonmem jobs this specifies the path to the bbi config file `bbi.yaml`. By default, `submit_slurm_job` uses the `slurmtools` option `options('slurmtools.bbi_config_path)` (see the [Getting Started Guide](/guides/1_getting_started) if you are unfamiliar with this option). If you would like to use a different configuration for `bbi` you can specify the path to a new config file and use that.
 
-import submit_code_bbi from '/src/submit_bbi.R?raw';
+import submit_code_bbi from '/src/code/submit_bbi.R?raw';
 
 <Code title='submit_job.R' lang='r' code={submit_code_bbi}/>
 
@@ -95,7 +95,7 @@ import submit_code_bbi from '/src/submit_bbi.R?raw';
 
 If additional arguments are needed in your template file, pass them via `slurm_template_opts` as a named list. For example, to set an email for notifications:.
 
-import submit_code_opts from '/src/submit_opts.R?raw';
+import submit_code_opts from '/src/code/submit_opts.R?raw';
 
 <Code title='submit_job.R' lang='r' code={submit_code_opts}/>
 
