added default template values

--- a/src/content/docs/blogs/submit.mdx
+++ b/src/content/docs/blogs/submit.mdx
@@ -11,3 +11,17 @@ Writing a good guide requires thinking about what your users are trying to do.
 - Read [about how-to guides](https://diataxis.fr/how-to-guides/) in the Diátaxis framework
 
 :::tip[Did you know?]
+:::
+
+:::note
+just a note
+:::
+
+:::caution
+this is caution
+:::
+
+:::danger[DANGER DANGER]
+dont do this
+:::
+
