--- a/src/content/docs/guides/get_slurm_partitions.mdx
+++ b/src/content/docs/guides/get_slurm_partitions.mdx
@@ -9,7 +9,7 @@ import { Aside, Code, Steps } from '@astrojs/starlight/components';
 
 This guide describes how to view available slurm partitions using the `get_slurm_partitions` function.
 
-## Prerequisite files and programs
+## Prerequisites
 
 - **None**
 
