--- a/src/content/docs/guides/submit_slurm_job.mdx
+++ b/src/content/docs/guides/submit_slurm_job.mdx
@@ -7,7 +7,7 @@ import { Aside, Code, Steps } from '@astrojs/starlight/components';
 
 This guide describes how to submit a NONMEM job to slurm using the `submit_slurm_job` function. First, make sure you have loaded `slurmtools` and are familiar with the [needed options](/guides/1_getting_started) to use slurmtools.
 
-## Prerequisite files and programs
+## Prerequisites
 
 To use `submit_slurm_job` you need a few things set before hand
 <Steps>
