--- a/src/content/docs/guides/simple_template_file.mdx
+++ b/src/content/docs/guides/simple_template_file.mdx
@@ -1,5 +1,6 @@
 ---
-title: How to write a simple template file
+title: How to write a template file
 description: A guide for submit_slurm_job.
 pagefind: true
 ---
+
