added writing template file and default values sent to template

--- a/src/content/docs/guides/1_getting_started.mdx
+++ b/src/content/docs/guides/1_getting_started.mdx
@@ -17,6 +17,8 @@ Once installed, load `slurmtools` with:
 library(slurmtools)
 ```
 
+## `slurmtools` options
+
 When `slurmtools` loads, you'll see an onAttach message listing several options that can be set for convenience when submitting jobs:
 <Card>
 <span style="display: block;">── <strong>Needed slurmtools options</strong> ──────────────────────</span>
