changed blogs to Beyond the Basics. Updated template file

--- a/src/content/docs/blogs/simple_notifications.mdx
+++ b/src/content/docs/blogs/simple_notifications.mdx
@@ -1,5 +1,5 @@
 ---
-title: Adding notifications
+title: Adding notifications for slurm job status
 description: A guide for slurmtools.
 pagefind: true
 ---
