--- a/src/content/docs/guides/0_intro.mdx
+++ b/src/content/docs/guides/0_intro.mdx
@@ -7,7 +7,7 @@ import { Steps } from '@astrojs/starlight/components';
 
 Welcome to the `slurmtools` User Guide! `slurmtools` provides scientists with a user-friendly toolkit for seamless Slurm integration, making job submission, monitoring, and management a breeze. With its intuitive interface, you can customize job submissions through flexible template files, perfectly adapting `slurmtools` to your unique research workflows. As `slurmtools` is in active, early-stage development, be sure to visit our GitHub page frequently to stay up-to-date with the latest features and releases.
 
-## What is `slurmtools`
+## What is `slurmtools`?
 
 At its core, `slurmtools` is a lightweight yet powerful package, designed to streamline your interactions with Slurm using simple slurm command wrappers. Here’s a quick overview of what you can do:
 <Steps>
