--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,8 +10,8 @@ hero:
     - text: Slurmtools User Guide
       link: /guides/0_intro/
       icon: right-arrow
-    - text: Read the slurmtools docs
-      link: https://a2-ai.github.io/slurmtools/
+    - text: Explore the slurmtools repository
+      link: https://github.com/a2-ai/slurmtools/
       icon: external
       variant: minimal
 ---
@@ -22,13 +22,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="Submitting a NONMEM job" icon="seti:bicep">
-		<a href="/guides/submit_nonmem_model">A brief intro into submitting NONMEM jobs with slurmtools</a>
+		<a href="/guides/submit_slurm_job">A brief intro into submitting NONMEM jobs with `slurmtools`</a>
 	</Card>
 	<Card title="Monitoring NONMEM jobs" icon="magnifier">
-		<a href="/guides/get_slurm_jobs">A brief intro into monitoring NONMEM jobs with slurmtools</a>
+		<a href="/guides/get_slurm_jobs">A brief intro into monitoring NONMEM jobs with `slurmtools`</a>
 	</Card>
 	<Card title="Writing a template file" icon="seti:mustache">
-		<a href="/blogs/writing_templates">A brief intro into customizing slurm job template files</a>
+		<a href="/guides/simple_template_file">A brief intro into writing slurm job template files</a>
 	</Card>
 	<Card title="Getting notifications" icon="information">
 		Update a template to get ntfy.sh alerts.
