--- a/src/content/docs/guides/generate_nmm_config.mdx
+++ b/src/content/docs/guides/generate_nmm_config.mdx
@@ -4,8 +4,4 @@ description: A guide for generate_nmm_config.
 pagefind: true
 ---
 
-# Overview 
-This function generates a nmm config file
-
-## nitty gritty
-some detailed description of how this works, and how this relates to job submission
+This guide describes how to create a [NONMEMmonitor](https://github.com/a2-ai/nonmem-monitor) (`nmm`) configuration `toml` file using the `generate_nmm_config` function. `nmm` is a NONMEM job submitter, that uses `bbi` to submit jobs, but includes some additional monitoring 
