--- a/src/content/docs/reference/generate_nmm_config_reference.mdx
+++ b/src/content/docs/reference/generate_nmm_config_reference.mdx
@@ -4,3 +4,29 @@ description: A guide for generate_nmm_config.
 pagefind: true
 ---
 
+### Using the `model_number` argument
+  model_number = NULL,
+
+### Using the `files_to_track` argument
+  files_to_track = NULL,
+
+### Using the `tmp_dir` argument
+  tmp_dir = NULL,
+
+### Using the `watched_dir` argument
+  watched_dir = file.path("model", "nonmem"),
+
+### Using the `output_dir` argument
+  output_dir = file.path(watched_dir, "in_progress"),
+  
+### Using the `poll_duration` argument
+  poll_duration = NULL,
+
+### Using the `level` argument
+  level = NULL,
+
+### Using the `threads` argument
+  threads = NULL,
+
+### Using the `alerter_opts` argument
+  alerter_opts = list()
