generate nmm config update

--- a/src/content/docs/guides/submit_slurm_job.mdx
+++ b/src/content/docs/guides/submit_slurm_job.mdx
@@ -54,4 +54,4 @@ $timeout
 <Aside type="tip"path> A status code of 0 is what you want! It indicates there were no issues. </Aside>
 
 ## Next Steps
-For more advanced usage: If you’re interested in learning how to use non-default arguments with submit_slurm_job for more customized job submissions, please check out our [`submit_slurm_job` Reference Guide](/reference/submit_slurm_job_reference)
+For more advanced usage: If you’re interested in learning how to use non-default arguments with `submit_slurm_job` for more customized job submissions, please check out our [`submit_slurm_job` Reference Guide](/reference/submit_slurm_job_reference)
