--- a/src/content/docs/guides/generate_nmm_config.mdx
+++ b/src/content/docs/guides/generate_nmm_config.mdx
@@ -11,7 +11,7 @@ This guide describes how to create a [NONMEMmonitor](https://github.com/a2-ai/no
 ## Prerequisites
 <Steps>
 1. `nmm` installed
-2. [template file](guides/simple_template_file) that uses `nmm`
+2. [`nmm` specific template file](/blogs/nmm_template)
 </Steps>
 
 ## Generating a `nmm` config
@@ -22,7 +22,7 @@ import generate_nmm from '/src/code/generate_nmm.R?raw';
 <Code lang='r' title='generate_nmm_config.R' code={generate_nmm}/>
 
 <Aside type='note'>
-To understand what the `watched_dir` and `output_dir` are doing, see the [`generate_nmm_config` reference guide](/reference/generate_nmm_config_reference)
+To understand what the [`watched_dir` argument](/reference/generate_nmm_config_reference#using-the-watched_dir-argument) and [`output_dir` argument](/reference/generate_nmm_config_reference#using-the-output_dir-argument) are doing, see the [`generate_nmm_config` reference guide](/reference/generate_nmm_config_reference)
 </Aside>
 
 This function call will generate a `1001.toml` file with the following contents
@@ -32,7 +32,8 @@ watched_dir = '/cluster-data/user-homes/user/slurmtools/model/nonmem'
 output_dir = '/cluster-data/user-homes/user/slurmtools/model/nonmem/in_progress'"
 />
 
-
-
 ## Submitting a NONMEM job
-Here’s the code you’ll use to submit a job with submit_slurm_job, this uses default values for all arguments, many of which are determined via the slurmtools options discussed here.
+You can then use [`submit_slurm_job`](/guides/submit_slurm_job) as normal!
+
+## Next steps
+For more advanced usage: If you’re interested in learning how to use non-default arguments with submit_slurm_job for more customized job submissions, please check out our [`generate_nmm_config` Reference Guide](/reference/generate_nmm_config_reference)
