updated nmm template docs

--- a/src/content/docs/blogs/simple_notifications.mdx
+++ b/src/content/docs/blogs/simple_notifications.mdx
@@ -3,3 +3,8 @@ title: Adding notifications for slurm job status
 description: A guide for slurmtools.
 pagefind: true
 ---
+
+# Coming soon!
+
+Here we will expand upon how to write a template file to incorporate [ntfy.sh](https://ntfy.sh) notifications!
+
