--- a/src/content/docs/guides/generate_nmm_config.mdx
+++ b/src/content/docs/guides/generate_nmm_config.mdx
@@ -36,4 +36,4 @@ output_dir = '/cluster-data/user-homes/user/slurmtools/model/nonmem/in_progress'
 You can then use [`submit_slurm_job`](/guides/submit_slurm_job) as normal!
 
 ## Next steps
-For more advanced usage: If you’re interested in learning how to use non-default arguments with submit_slurm_job for more customized job submissions, please check out our [`generate_nmm_config` Reference Guide](/reference/generate_nmm_config_reference)
+For more advanced usage: If you’re interested in learning how to use non-default arguments with submit_slurm_job for more customized job submissions, please check out our [`generate_nmm_config` Reference Guide](/reference/generate_nmm_config_reference)! If you'd like to integrate notifications with `nmm` please see the [`nmm` alerter configuration guide](/blogs/using_alerter_with_nmm)
