--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -31,7 +31,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		<a href="/guides/simple_template_file">A brief intro into writing slurm job template files</a>
 	</Card>
 	<Card title="Getting notifications" icon="information">
-		Update a template to get ntfy.sh alerts.
+		<a href="/blogs/simple_notifications">Update a template to get ntfy.sh alerts.</a>
 	</Card>
 	<Card title = "Getting slacks" icon="slack">
 		get slack notifications
