--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -18,7 +18,7 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Slurmtools
+## Slurmtools Highlights
 
 <CardGrid stagger>
 	<Card title="Submitting a NONMEM job" icon="seti:bicep">
@@ -36,5 +36,4 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title = "Getting slacks" icon="slack">
 		get slack notifications
 	</Card>
-
 </CardGrid>
