fixed cancel slurm job link

--- a/src/content/docs/guides/0_intro.mdx
+++ b/src/content/docs/guides/0_intro.mdx
@@ -13,7 +13,7 @@ At its core, `slurmtools` is a lightweight yet powerful package, designed to str
 <Steps>
 1. [submit_slurm_job](/guides/submit_slurm_job) - Easily submit jobs with this `sbatch` wrapper
 2. [get_slurm_jobs](/guides/get_slurm_partitions) - Get a summary of running jobs with this `squeue` wrapper
-3. [cancel_slurm_job](/guides/cancel_job) - Cancel a job with this `scancel` wrapper
+3. [cancel_slurm_job](/guides/cancel_slurm_job) - Cancel a job with this `scancel` wrapper
 4. [get_slurm_partitions](/guides/get_slurm_partitions) - Get a list of available partitions with this `sinfo` wrapper
 </Steps>
 and a helper function:
