updated site and base and updated all links to include base. moved images to public.

--- a/src/content/docs/guides/cancel_slurm_job.mdx
+++ b/src/content/docs/guides/cancel_slurm_job.mdx
@@ -10,7 +10,7 @@ This guide describes how to cancel jobs submitted to slurm using the `cancel_slu
 
 ## Prerequisites
 <Steps>
-1. Submit a job to slurm (see [How to submit a NONMEM job to slurm](/guides/submit_slurm_job))
+1. Submit a job to slurm (see [How to submit a NONMEM job to slurm](/slurmtools-docs/guides/submit_slurm_job))
 2. Job ID of the job you wish to cancel
 </Steps>
 
@@ -33,4 +33,4 @@ Entering `Y` will cancel the job `12345`.
 
 ## Next Steps
 
-See the [`cancel_slurm_job` reference guide](/reference/cancel_slurm_job_reference) for more detailed explaination of the function.
+See the [`cancel_slurm_job` reference guide](/slurmtools-docs/reference/cancel_slurm_job_reference) for more detailed explanation of the function.
