--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/slurmtools.png
   actions:
     - text: Slurmtools User Guide
-      link: /guides/0_intro/
+      link: guides/0_intro/
       icon: right-arrow
     - text: Explore the slurmtools repository
       link: https://github.com/a2-ai/slurmtools/
@@ -22,15 +22,15 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="Submitting a NONMEM job" icon="seti:bicep">
-		<a href="/guides/submit_slurm_job">A brief intro into submitting NONMEM jobs with `slurmtools`</a>
+		<a href="guides/submit_slurm_job">A brief intro into submitting NONMEM jobs with `slurmtools`</a>
 	</Card>
 	<Card title="Monitoring NONMEM jobs" icon="magnifier">
-		<a href="/guides/get_slurm_jobs">A brief intro into monitoring NONMEM jobs with `slurmtools`</a>
+		<a href="guides/get_slurm_jobs">A brief intro into monitoring NONMEM jobs with `slurmtools`</a>
 	</Card>
 	<Card title="Writing a template file" icon="seti:mustache">
-		<a href="/guides/simple_template_file">A brief intro into writing slurm job template files</a>
+		<a href="guides/simple_template_file">A brief intro into writing slurm job template files</a>
 	</Card>
 	<Card title="Getting notifications" icon="information">
-		<a href="/blogs/simple_notifications">Update a template to get ntfy.sh alerts.</a>
+		<a href="blogs/simple_notifications">Update a template to get ntfy.sh alerts.</a>
 	</Card>
 </CardGrid>
